first commit from android studio

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,32 +2,26 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="zeitfaden.com.zeitfaden" >
 
-
-
-
-    <uses-permission android:name="ANDROID.PERMISSION.INTERNET"/>
-    <uses-permission android:name="ANDROID.PERMISSION.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="ANDROID.PERMISSION.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="ANDROID.PERMISSION.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="ANDROID.PERMISSION.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+    <uses-permission android:name="ANDROID.PERMISSION.INTERNET" />
+    <uses-permission android:name="ANDROID.PERMISSION.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="ANDROID.PERMISSION.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="ANDROID.PERMISSION.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="ANDROID.PERMISSION.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
 
     <uses-feature
         android:glEsVersion="0x00020000"
-        android:required="true"/>
-
-
+        android:required="true" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyAX-728ZKZxczqrUkghH6blVvhkXcrRkJo" />
-        
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
@@ -37,9 +31,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name=".GeoPositionService"
+            android:enabled="true"
+            android:exported="true" >
+        </service>
+
+        <activity
+            android:name=".ShowMapActivity"
+            android:label="@string/title_activity_show_map" >
+        </activity>
     </application>
-
-
-
 
 </manifest>
