--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,9 +22,14 @@ android {
     }
 }
 
+repositories {
+    mavenCentral()
+}
+
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.google.android.gms:play-services:6.5.87'
     compile 'com.google.code.gson:gson:2.3'
+    compile 'com.google.apis:google-api-services-oauth2:v1-rev95-1.20.0'
 }
