--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,8 +28,7 @@ repositories {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:21.0.3'
-    compile 'com.google.android.gms:play-services:6.5.87'
-    compile 'com.google.code.gson:gson:2.3'
-    compile 'com.google.apis:google-api-services-oauth2:v1-rev95-1.20.0'
+    compile 'com.android.support:appcompat-v7:22.2.1'
+    compile 'com.google.android.gms:play-services:7.5.0'
+    compile 'com.android.support:support-v4:22.2.1'
 }
