--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,22 +3,37 @@ apply plugin: 'com.android.application'
 android {
     signingConfigs {
     }
-    compileSdkVersion 21
-    buildToolsVersion "21.1.2"
+    compileSdkVersion 24
+    buildToolsVersion "23.0.3"
     defaultConfig {
         applicationId "zeitfaden.com.zeitfaden"
         minSdkVersion 19
-        targetSdkVersion 21
+        targetSdkVersion 24
         versionCode 1
         versionName "1.0"
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFile '../proguard/proguard-facebook.pro' //facebook native auth
+            proguardFile '../proguard/proguard-google-play-services.pro' //G+ native auth
+            proguardFile '../proguard/proguard-square-okhttp.pro' //Auth0 core
+            proguardFile '../proguard/proguard-jackson-2.pro' //Auth0 core
+            proguardFile '../proguard/proguard-square-otto.pro' //Lock
+            proguardFile '../proguard/proguard-lock.pro' //Lock
+
         }
         debug {
         }
+    }
+
+    useLibrary 'org.apache.http.legacy'
+
+
+    packagingOptions {
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
     }
 }
 
@@ -28,9 +43,10 @@ repositories {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.google.android.gms:play-services:7.5.0'
-    compile 'com.android.support:support-v4:22.2.1'
+    compile 'com.android.support:support-v4:24.0.0'
     compile 'com.google.code.gson:gson:2.3.1'
+    compile 'com.android.support:appcompat-v7:24.0.0'
+    compile 'com.auth0.android:lock:1.16.+'
 
 }
