--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,5 +48,6 @@ dependencies {
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.android.support:appcompat-v7:24.0.0'
     compile 'com.auth0.android:lock:1.16.+'
+    compile 'com.squareup.okhttp3:okhttp:3.3.1'
 
 }
